@@ -48,6 +48,12 @@
 (setq howm-file-name-format "%Y-%m-%d-%H%M%S.org")
 (setq howm-view-title-header "*")
 (setq howm-dtime-format "[%Y-%m-%d %a %H:%M]")
+(setq howm-view-title-skip-regexp
+      (concat "\\(^\\*?\\s-*$\\)" "\\|"  ;; empty title or ...
+              ;; date & time
+              (concat "\\(^\\[[0-9]\\{4\\}-[0-9]\\{2\\}-[0-9]\\{2\\}"
+                      " .+ " ;; day of the week
+                      "[0-9]\\{2\\}:[0-9]\\{2\\}\\]\\)")))
 (setq howm-menu-file-extension ".org")
 (setq howm-menu-skel-replace-rules '(("^= " . "* ") ("^== " . "** ")))
 (add-hook 'howm-view-summary-mode-hook #'howm-org-font-lock-minor-mode)
